--- a/static/rate.css
+++ b/static/rate.css
@@ -14,7 +14,7 @@ p {
 
 .form_center {
     margin: auto 0;
-    display: flex;
+    display: center;
     flex-wrap: wrap;
     justify-content: space-between;
 }
@@ -39,9 +39,10 @@ li {
     text-align: center;
 }
 
+
 @media screen and (max-width: 500px) {
     li {
-        font-size: 30px;
+        font-size: 20px;
         text-align: center;
     }
 }
