--- a/templates/dining.html
+++ b/templates/dining.html
@@ -38,7 +38,7 @@
          <h2 class="full-width">Dining Locations</h2>
          <figure>
             <img src="../static/hoursofoperation.png" alt="Fall Hours of Operation" id="hoursofop">
-            <figcaption>Chart made by &nbsp;<a href="https://dining.rochester.edu/">UR Dining Services</a>, double press image to open in new tab (not working yet, fyi for any beta testers)</figcaption>
+            <figcaption>Chart made by &nbsp;<a href="https://dining.rochester.edu/">UR Dining Services</a>, double press image to open in new tab</figcaption>
          </figure>
          <div class="futureplans">
          <h3><em>Ideas for Future Features</em></h3>
