making submit button on downdetector a better size

--- a/templates/downdetector.html
+++ b/templates/downdetector.html
@@ -36,6 +36,10 @@
         font-size: 75%;
         color: #003366;
     }
+
+    input[type="submit"] {
+        font-size: 1em;
+    }
 </style>
 {% endblock %}
 
