--- a/templates/downdetector.html
+++ b/templates/downdetector.html
@@ -36,6 +36,7 @@
         font-size: 75%;
         color: #003366;
     }
+    
 </style>
 {% endblock %}
 
@@ -62,6 +63,7 @@
 
     <h3>24h Outage Records</h3>
     <canvas id="barChart"></canvas>
+    <p>Time is displayed in military time. Most recent reports begin on the left-hand side.</p>
 </div>
 </div>
 <script>
@@ -73,7 +75,7 @@
 
     // Set the width and height of the canvas to the width and height of the div
     canvas.width = container.offsetWidth * 0.75;
-    canvas.height = container.offsetHeight * 0.50;
+    canvas.height = container.offsetHeight * 0.40;
     //IGNORE RED UNDERLINES, jinja will populate data before the js script runs
     const ctx = document.getElementById('barChart');
 
