--- a/static/rate.css
+++ b/static/rate.css
@@ -67,9 +67,9 @@ li {
 
 label {
     font-family: "Century Gothic", "Avant Garde", AppleGothic, Futura, Geneva, sans-serif;
-    color: #ADD8E6;
+    color: black;
     /* font-weight: bold; */
-    font-size: 2em;
+    font-size: 1em;
 }
 
 input {
@@ -256,8 +256,8 @@ h3 {
 
 p {
     font-family: "Trebuchet MS";
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 1em;
+    
     padding-left: 1em;
     padding-right: 1em;
 }
