--- a/static/styles.css
+++ b/static/styles.css
@@ -29,8 +29,8 @@ li {
 .lead {
 	background-color: #999999;
 	color: #323131;
-	padding: 3em;
 	border-radius: 15px 15px 15px 15px;
+	padding: 30px;
 	margin: 0 auto;
 	margin-top: 4em;
 	display: flex;
