update label color for feedbackform

--- a/static/rate.css
+++ b/static/rate.css
@@ -67,7 +67,7 @@ li {
 
 label {
     font-family: "Century Gothic", "Avant Garde", AppleGothic, Futura, Geneva, sans-serif;
-    color: black;
+    color: #003366;
     /* font-weight: bold; */
     font-size: 1em;
 }
