dining form padding

--- a/templates/diningfeedback.html
+++ b/templates/diningfeedback.html
@@ -8,8 +8,13 @@
    <link rel="stylesheet" href="../static/styles.css">
    <style>
 	.lead {
-	padding-left: 3em;
-	padding-right: 3em;
+		padding-left: 3em;
+		padding-right: 3em;
+	}
+
+	fieldset {
+		padding-left: 10em;
+		padding-right: 10em;
 	}
    </style>
 {% endblock %}
