removing px references

--- a/templates/downdetector.html
+++ b/templates/downdetector.html
@@ -12,12 +12,9 @@
         text-align: center;
         font-size: 30px;
         color: black;
-        padding: 10px;
         float: left;
         align-items: center;
         justify-content: center;
-        height: 900px;
-        width: 45%;
         margin: 0 auto;
     }
 
@@ -28,13 +25,13 @@
         padding: 10px;
         align-items: center;
         justify-content: center;
-        width: 45%;
         margin: 0 auto;
     }
 
     label{
         font-size: 75%;
         color: #003366;
+        
     }
 
     input[type="submit"] {
@@ -66,7 +63,7 @@
 
     <h3>24h Outage Records</h3>
     <canvas id="barChart"></canvas>
-    <p>Time is displayed in military time. Most recent reports begin on the left-hand side.</p>
+    <p>Time is displayed in military time. Most recent reports begin on the left-hand side. Only down records are displayed.</p>
 </div>
 </div>
 <script>
