all px references removed

--- a/templates/downdetector.html
+++ b/templates/downdetector.html
@@ -10,7 +10,7 @@
 <style>
     div.one {
         text-align: center;
-        font-size: 30px;
+        font-size: 2em;
         color: black;
         float: left;
         align-items: center;
@@ -20,9 +20,8 @@
 
     div.two {
         text-align: center;
-        font-size: 30px;
+        font-size: 2em;
         color: black;
-        padding: 10px;
         align-items: center;
         justify-content: center;
         margin: 0 auto;
