making lead in contact us same size

--- a/templates/feedbackform.html
+++ b/templates/feedbackform.html
@@ -6,6 +6,12 @@
    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <link rel="stylesheet" href="../static/styles.css">
+   <style>
+   .lead {
+	padding-left: 3em;
+	padding-right: 3em;
+	}
+   </style>
 {% endblock %}
 
 {% block content %}
