--- a/templates/downdetector.html
+++ b/templates/downdetector.html
@@ -25,12 +25,12 @@
         align-items: center;
         justify-content: center;
         margin: 0 auto;
+        padding: 2em;
     }
 
     label{
         font-size: 75%;
         color: #003366;
-        
     }
 
     input[type="submit"] {
