--- a/static/styles.css
+++ b/static/styles.css
@@ -122,6 +122,7 @@ fieldset {
 		padding-left:  0px;
 		padding-right: 0px;
 		padding-bottom: 0em;
+		padding-top: .5em;
 		border-radius:  0px;
 		margin-left: 0;
 	}
