down detector graph label fix

--- a/templates/downdetector.html
+++ b/templates/downdetector.html
@@ -76,7 +76,7 @@
 
     <h3>24h Outage Records</h3>
     <canvas id="barChart"></canvas>
-    <p>Time is displayed in military time. Most recent reports begin on the left-hand side. Only down records are displayed.</p>
+    <p>Time is displayed in hours from current time. Most recent reports begin on the left-hand side. Only down records are displayed.</p>
 </div>
 </div>
 <script>
