--- a/static/styles.css
+++ b/static/styles.css
@@ -139,6 +139,8 @@ fieldset {
 	.form, form, fieldset {
 		max-width: 100%;
 		width: 100%;
+		margin-left: 0 auto;
+		margin-right: 0 auto;
 	}
 
 	fieldset {
