--- a/static/styles.css
+++ b/static/styles.css
@@ -86,79 +86,6 @@ input[type=submit] {
 
 /* end of form styles */
 
-
-@media screen and (min-width: 550px) and (max-width: 1000px) {
-	.lead {
-		max-width: 90%;
-	}
-
-.form, form, fieldset {
-	margin: 0 auto;
-}
-
-fieldset {
-	margin: 0 auto;
-	padding: 2em;
-	}
-}
-
-#accordion {
-	margin: 0 auto;
-	max-width: 90%;
-}
-
-.whatisopen {
-	background-color: #003366;
-	margin-top: 2em;
-	max-width: 60%;
-	margin-left: 20%;
-	border-radius: 15px;
-}
-
-@media screen and (min-width: 200px) and (max-width: 550px) {
-	
-	.lead, .whatisopen {
-		max-width: 100%;
-		padding-left:  0px;
-		padding-right: 0px;
-		padding-bottom: 0em;
-		padding-top: .5em;
-		border-radius:  0px;
-		margin-left: 0;
-	}
-
-	h2 {
-		margin-bottom: 1em;
-	}
-
-	#accordion {
-		max-width: 100%;
-		width: 100%;
-	}
-
-	.form, form, fieldset {
-		max-width: 100%;
-		width: 100%;
-		margin-left: 0 auto;
-		margin-right: 0 auto;
-	}
-
-	fieldset {
-		padding-top: 2em;
-		padding-bottom: 2em;
-		padding-right: 0em;
-		padding-left: 0em;
-	}
-
-	input {
-		margin-bottom: 2.5em;
-	}
-
-	textarea {
-		padding: 2em;
-	}
-}
-
 #current_date, #fall_schedule {
 	font-size: larger;
 	color: #ffdb4d;
@@ -388,6 +315,82 @@ footer h4 {
 	font-size: 25px;
 	padding-left: 1.5em;
 	padding-right: 1.5em;
+}
+
+/* mobile forms */
+
+
+@media screen and (min-width: 550px) and (max-width: 1400px) {
+	.lead {
+		max-width: 90%;
+	}
+
+.form, form, fieldset {
+	margin: 0 auto;
+	width: 100%
+}
+
+fieldset {
+	margin: 0 auto;
+	padding: 2em;
+	}
+}
+
+#accordion {
+	margin: 0 auto;
+	max-width: 90%;
+}
+
+.whatisopen {
+	background-color: #003366;
+	margin-top: 2em;
+	max-width: 60%;
+	margin-left: 20%;
+	border-radius: 15px;
+}
+
+@media screen and (min-width: 200px) and (max-width: 550px) {
+	
+	.lead, .whatisopen {
+		max-width: 100%;
+		padding-left:  0px;
+		padding-right: 0px;
+		padding-bottom: 0em;
+		padding-top: .5em;
+		border-radius:  0px;
+		margin-left: 0;
+	}
+
+	h2 {
+		margin-bottom: 1em;
+	}
+
+	#accordion {
+		max-width: 100%;
+		width: 100%;
+	}
+
+	.form, form, fieldset {
+		max-width: 100%;
+		width: 100%;
+		margin-left: 0 auto;
+		margin-right: 0 auto;
+	}
+
+	fieldset {
+		padding-top: 2em;
+		padding-bottom: 2em;
+		padding-right: 0em;
+		padding-left: 0em;
+	}
+
+	input {
+		margin-bottom: 2.5em;
+	}
+
+	textarea {
+		padding: 2em;
+	}
 }
 
 @media screen and (min-width: 200px) and (max-width: 550px) {
