fixing padding again

--- a/templates/feedbackform.html
+++ b/templates/feedbackform.html
@@ -11,6 +11,12 @@
 	padding-left: 3em;
 	padding-right: 3em;
 	}
+
+	@media screen and (min-width: 200px) and (max-width: 550px) {
+		.lead {
+			padding: 0em;
+		}
+	}
    </style>
 {% endblock %}
 
