--- a/templates/diningfeedback.html
+++ b/templates/diningfeedback.html
@@ -16,6 +16,16 @@
 		padding-left: 10em;
 		padding-right: 10em;
 	}
+
+	@media screen and (min-width: 200px) and (max-width: 550px) {
+		.lead {
+			padding: 0em;
+		}
+
+		fieldset {
+			padding: 0em;
+		}
+	}
    </style>
 {% endblock %}
 
