adding top/bottom padding for whitespace

--- a/templates/diningfeedback.html
+++ b/templates/diningfeedback.html
@@ -20,6 +20,8 @@
 	@media screen and (min-width: 200px) and (max-width: 550px) {
 		.lead {
 			padding: 0em;
+			padding-top: 2em;
+			padding-bottom: 2em;
 		}
 
 		fieldset {
