--- a/templates/feedbackform.html
+++ b/templates/feedbackform.html
@@ -15,6 +15,8 @@
 	@media screen and (min-width: 200px) and (max-width: 550px) {
 		.lead {
 			padding: 0em;
+			padding-bottom: 2em;
+			padding-bottom: 2em;
 		}
 	}
    </style>
