changing up padding

--- a/templates/diningfeedback.html
+++ b/templates/diningfeedback.html
@@ -26,6 +26,12 @@
 
 		fieldset {
 			padding: 0em;
+			padding-top: 2em;
+			padding-bottom:2em;
+		}
+
+		.form {
+			padding-top: 2em;
 		}
 	}
    </style>
