--- a/templates/dining.html
+++ b/templates/dining.html
@@ -42,7 +42,7 @@
          </figure>
          <div class="futureplans">
          <h3><em>Ideas for Future Features</em></h3>
-            <span class="full-text"><p>This will contain a short description and an image of a mockup for a feature that could be implemented in the future</p></span>
+            <span class="full-text"><p>A future goal for this page would be to include extra menu filters and information for a greater number of locations than is currently represented on the official site.</p></span>
          </div>
     <h2 class="dining-link">Want to share your feedback about dining? <a href="/diningfeedbackform">Click here!</a></h2>
       </section>
