improving highlight styles

--- a/templates/downdetector.html
+++ b/templates/downdetector.html
@@ -34,10 +34,15 @@
         background-color: #ffdb4d;
         align-items: center;
         justify-content: center;
-        margin-left: 3em;
-        margin-right: 3em;
-        border-radius: 1em;
+        margin-left: 4em;
+        margin-right: 4em;
+        border-radius: .5em;
         text-align: center;
+    }
+
+    .highlight h3 {
+        padding-top: 1em;
+        padding-bottom: 1em;
     }
 
     label{
