--- a/templates/ratemycourse.html
+++ b/templates/ratemycourse.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="../static/styles.css">
+<link rel="stylesheet" href="../static/rate.css">
 
 <script src="/static/script.js"></script>
 <style>
@@ -29,8 +29,7 @@
 		<h2 class="full-width">Rate My Course</h2>
 		<form method="POST">
 			<center>
-				{{ form.csrf_token }}
-				<p class="departments">Department</p>
+				<b>Department</b>
 				{{ form.department }}
 				<!-- <select id="dropMenu" class="dropdown-content" name = "dropMenu">
 					<option value="Accounting">Accounting</option>
