fixing margin on butttons

--- a/templates/downdetector.html
+++ b/templates/downdetector.html
@@ -48,6 +48,10 @@
     input[type="submit"] {
         font-size: 1em;
     }
+
+    input {
+        margin-bottom: 0em;
+    }
 </style>
 {% endblock %}
 
