--- a/static/styles.css
+++ b/static/styles.css
@@ -65,7 +65,9 @@ textarea {
 	margin-top: 2em;
 	resize: none;
 	overflow: hidden;
-	padding: 5em;
+	padding: 1em;
+	width: 70%;
+	height: 10em;
 }
 
 fieldset {
@@ -243,12 +245,7 @@ p {
 	padding-right:  1em;
 }
 
-.departments {
-	font-family: "Century Gothic", "Avant Garde", AppleGothic, Futura, Geneva, sans-serif;
-	color: #ADD8E6;
-	font-weight: bold;
-	font-size: 2em;
-}
+
 
 ul {
 	font-family: "Century Gothic", "Avant Garde", AppleGothic, Futura, Geneva, sans-serif;
