--- a/static/rate.css
+++ b/static/rate.css
@@ -4,14 +4,6 @@
 }
 
 
-
-p {
-    margin: auto;
-    display: inline-flex;
-    grid-template-columns: 2fr 1fr;
-    text-align: center;
-}
-
 .form_center {
     margin: auto 0;
     display: center;
@@ -248,17 +240,17 @@ h2 {
 
 
 h3 {
-    margin: 40px;
+    margin: 1em;
     line-height: 1.5em;
     font-family: "Century Gothic","Avant Garde", AppleGothic, Futura, Geneva, sans-serif;
     text-align: center;
-    font-size: 30px;
+    font-size: 3em;
     color: #003366;
 }
 
 p {
     font-family: "Trebuchet MS";
-    font-size: 1em;
+    font-size: 1.5em;
     
     padding-left: 1em;
     padding-right: 1em;
@@ -466,10 +458,12 @@ input {
     border-radius: 15px 15px 15px 15px;
     margin: auto;
     max-width: 70%;
+    margin-bottom: 3em;
+    margin-top: 2em;
 }
 
 
-.departments {
+#departments {
     font-family: "Century Gothic", "Avant Garde", AppleGothic, Futura, Geneva, sans-serif;
     color: #ADD8E6;
     font-weight: bold;
@@ -510,4 +504,11 @@ progress {
     background-color: #bfbfbf;
     display: inline-block;
     padding: 0.5em;
+}
+
+input[type=text] {
+    margin-top: 0.5em;
+}
+input[type=select] {
+    width: 20%;
 }
