--- a/templates/ratemycourse.html
+++ b/templates/ratemycourse.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="../static/rate.css">
 
-<script src="/static/script.js"></script>
+<!-- <script src="/static/script.js"></script> -->
 <style>
     .button {
         background-color: #333333;
@@ -63,8 +63,8 @@
 					<option value="Women's Studies">Women's Studies</option>
 					<option value="Writing">Writing</option>
 				</select>&nbsp; -->
-				<input id="abbreviation" type="text" placeholder="Course Abbr." name="abbreviation"> &nbsp;
-				<input type="submit" id="submit" name="submit" value="Search">
+				<input id="abbreviation" type="text" placeholder="Search Course Abbr." name="abbreviation"> &nbsp;
+				<input type="submit" id="submit" name="submit">
 				<!-- <input type="button" id="submitSearch" onclick="location.href='ratemycourse';" value="Submit" /> -->
 
 			{% if bool : %}
